added docker + docker-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.name=mhl
-spring.datasource.password=123
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.name=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
