--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,6 @@ services:
       - PGDATA=/var/lib/postgresql/data
     ports:
       - "5400:5400"
+    command: -p 5400
     expose:
       - 5400
