--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,16 +16,24 @@ services:
     ports:
       - "8000:8000"
 
-  postgres:
-    image: 'postgres:14.7-alpine'
-    container_name: db
+  pgbackups:
+    container_name: backup
+    image: prodrigestivill/postgres-backup-local
+    restart: always
+    volumes:
+      - ./backup:/backups
+    links:
+      - db:db
+    depends_on:
+      - db
     environment:
+      - POSTGRES_HOST=db
       - POSTGRES_DB=mhl
       - POSTGRES_USER=mhl
       - POSTGRES_PASSWORD=5DrX2kpqfa
-      - PGDATA=/var/lib/postgresql/data
-    ports:
-      - "5400:5400"
-    command: -p 5400
-    expose:
-      - 5400
+      - POSTGRES_EXTRA_OPTS=-Z9 --schema=public --blobs
+      - SCHEDULE=@daily
+      - BACKUP_KEEP_DAYS=7
+      - BACKUP_KEEP_WEEKS=4
+      - BACKUP_KEEP_MONTHS=6
+      - HEALTHCHECK_PORT=5400
