--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     depends_on:
       - db
     environment:
-      - POSTGRES_HOST=db
+      - POSTGRES_HOST=http://185.177.216.63:5400/mhl
       - POSTGRES_DB=mhl
       - POSTGRES_USER=mhl
       - POSTGRES_PASSWORD=5DrX2kpqfa
