--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     </parent>
     <groupId>com.mhl</groupId>
     <artifactId>mycompanybackend</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>demoauth</name>
+    <version>1.0.0</version>
+    <name>diplombackend</name>
     <description>mycompanybackend</description>
     <properties>
         <java.version>17</java.version>
